img fix overlap

--- a/style.css
+++ b/style.css
@@ -216,6 +216,8 @@ p {
 
 img {
 	margin:8px;
+	max-width: 100%;
+    height: auto;
 }
 
 /**********************************************/
